src/core-crm/objects/Activity/fields/Action_Cadence_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Cadence_Name__c</fullName>
    <label>Action Cadence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>