src/core-crm/objects/Activity/fields/Cadence_Name__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Name__c</fullName>
    <formula>IF( AND ( ISPICKVAL(ActivitySubtype, &apos;Cadence&apos;) , BEGINS(Subject, &apos;Call&apos;) ) , 
        MID( Subject , FIND(&apos;,&apos; , Subject )+2, FIND(&apos;,&apos; , RIGHT(Subject, LEN(Subject) - FIND(&apos;,&apos; , Subject )))-2) ,
        Action_Cadence_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cadence Name</label>
    <type>Text</type>
</CustomField>