src/core-crm/objects/Activity/fields/Completed_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Completed_Cadence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed Cadence</label>
    <referenceTo>Completed_Cadence__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>