src/core-crm/objects/Activity/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Contact__c)), Contact__r.FirstName, IF(NOT(ISBLANK(Lead__c)), Lead__r.FirstName,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>