src/core-crm/objects/Activity/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <formula>IF(NOT(ISBLANK(Contact__c)), Contact__r.Lead_Score__c, IF(NOT(ISBLANK(Lead__c)), Lead__r.Lead_Score__c, Null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>