src/core-crm/objects/Activity/fields/Message_Content__c.field-meta.xml
<CustomField>
    <fullName>Message_Content__c</fullName>
    <description>SMS Content that was sent to the Receiver</description>
    <label>Message Content</label>
    <length>160</length>
    <type>Text</type>
</CustomField>