src/core-crm/objects/Activity/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <formula>IF(NOT(ISBLANK(Contact__c)), Contact__r.MobilePhone , IF(NOT(ISBLANK(Lead__c)), Lead__r.MobilePhone,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>