src/core-crm/objects/Activity/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>IF(NOT(ISBLANK(Contact__c)),  Contact__r.Phone , IF(NOT(ISBLANK(Lead__c)), Lead__r.Phone ,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>