src/core-crm/objects/Activity/fields/QTAC_Offer_Round__c.field-meta.xml
<CustomField>
    <fullName>QTAC_Offer_Round__c</fullName>
    <label>QTAC Offer Round</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>