src/core-crm/objects/Activity/fields/Receiver__c.field-meta.xml
<CustomField>
    <fullName>Receiver__c</fullName>
    <description>The number of the contact or lead that received the SMS</description>
    <label>Receiver</label>
    <length>13</length>
    <type>Text</type>
</CustomField>