src/core-crm/objects/Activity/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <description>The number that sent the SMS</description>
    <label>Sender</label>
    <length>13</length>
    <type>Text</type>
</CustomField>