src/core-crm/objects/Activity/fields/SMS_Outcome__c.field-meta.xml
<CustomField>
    <fullName>SMS_Outcome__c</fullName>
    <description>SMS status outcome</description>
    <label>SMS Outcome</label>
    <length>100</length>
    <type>Text</type>
</CustomField>