src/core-crm/objects/Activity/fields/Time_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Complete__c</fullName>
    <label>Time to Complete (hours)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>